--- a/client/pages/sensor_data/webcam_totem/webcam.component.html
+++ b/client/pages/sensor_data/webcam_totem/webcam.component.html
@@ -1,9 +1,9 @@
-<div class="row" style="padding-top: 30px;">
+<div class="row" style="padding-top: 10px;">
 	<div class="row text-center">
 		<div class="col-sm-6">
-			<div class="chama-nao-detectada rounded">
+			<div class="chama-nao-detectada rounded" style="height: 150px;">
 				<div>
-					<img src="images/entrada.png" style="padding-top: 15px; width: 68px; height: 98px;"/>
+					<img src="images/entrada.png" style="padding-top: 5px; width: 68px; height: 78px;"/>
 				</div>
 				<div>
 					<span style="font-size: 18pt;">{{data.input || 0}} Entraram</span> 
@@ -12,9 +12,9 @@
 		</div>
 
 		<div class="col-sm-6">
-			<div class="chama-nao-detectada rounded">
+			<div class="chama-nao-detectada rounded" style="height: 150px;">
 				<div>
-					<img src="images/saida.png" style="padding-top: 15px; width: 68px; height: 98px;"/>
+					<img src="images/saida.png" style="padding-top: 5px; width: 68px; height: 78px;"/>
 				</div>
 				<div>
 					<span style="font-size: 18pt;">{{data.output || 0}} Sairam</span> 
@@ -25,9 +25,9 @@
 
 	<div class="row text-center">
 		<div class="col-sm-6" style="margin-top: 20px;">
-			<div class="chama-nao-detectada rounded" style="margin-top: 20px;">
+			<div class="chama-nao-detectada rounded" style="margin-top: 20px; height: 150px;">
 				<div>
-					<img src="images/pessoas.png" style="padding-top: 15px; width: 80px; height: 98px;"/>
+					<img src="images/pessoas.png" style="padding-top: 5px; width: 80px; height: 78px;"/>
 				</div>
 				<div>
 					<span style="font-size: 18pt;">{{data.present || 0}} Presentes</span> 
@@ -36,9 +36,9 @@
 		</div>
 
 		<div class="col-sm-6" style="margin-top: 20px;">
-			<div class="chama-nao-detectada rounded" style="margin-top: 20px;">
+			<div class="chama-nao-detectada rounded" style="margin-top: 20px; height: 150px;">
 				<div>
-					<img src="images/line-chart.png" style="padding-top: 15px; width: 68px; height: 98px;"/>
+					<img src="images/line-chart.png" style="padding-top: 5px; width: 68px; height: 78px;"/>
 				</div>
 				<div>
 					<span style="font-size: 18pt;">{{data.peak || 0}} Pico</span> 
