--- a/client/pages/app/app.component.html
+++ b/client/pages/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="row" style="margin-top: 35px;">
+<div class="row" style="margin-top: 15px;">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-2 top-bar">
@@ -52,11 +52,22 @@
 					</div>
 				</div>				
 			</div>
+
+			<img src="../images/hive-logo.png" style="width: 300px; margin-top: -80px; padding-bottom: 20px;">
+
+
+
+			<div style="text-align: center; margin-top: -60px; padding-bottom: 40px; ">
+				<span class="titleTwo" style="font-size: 40px;">Informa:</span>
+			</div>
 			
-			<div class="col-sm-4" style="margin-left: -30px; padding-top: 20px;">
+			
+		
+	
+			<div class="col-sm-4" style="margin-left: -30px; margin-top: -40px;">
 				<webcam></webcam>
 			</div>
-
+	
 			<!-- <div class="col-sm-6">
 				<consumption></consumption>
 			</div> -->	
