--- a/client/pages/app/app.component.html
+++ b/client/pages/app/app.component.html
@@ -53,18 +53,18 @@
 				</div>				
 			</div>
 
-			<img src="../images/hive-logo.png" style="width: 300px; margin-top: -80px; padding-bottom: 20px;">
+			<img src="../images/hive-logo.png" style="width: 300px; margin-top: -80px; padding-bottom: 20px; margin-left: -30px;">
 
 
 
-			<div style="text-align: center; margin-top: -60px; padding-bottom: 40px; ">
+			<div style="text-align: center; margin-top: -60px; padding-bottom: 40px; margin-left: -30px;">
 				<span class="titleTwo" style="font-size: 40px;">Informa:</span>
 			</div>
 			
 			
 		
 	
-			<div class="col-sm-4" style="margin-left: -30px; margin-top: -40px;">
+			<div class="col-sm-4" style="margin-left: -10px; margin-top: -40px;">
 				<webcam></webcam>
 			</div>
 	
