--- a/client/pages/sensor_data/flame_detection/flame-detection-real.component.html
+++ b/client/pages/sensor_data/flame_detection/flame-detection-real.component.html
@@ -1,6 +1,6 @@
 <div style="padding-top: 30px;">
 	<div *ngIf="data" class="chama-detectada rounded">
-		<div class="row text-center">
+		<div class="row text-center" style="height: 100px;">
 			<div class="col-md-4">
 				<img src="images/ic_flame_little_yes.png" style="position: absolute; padding-top: 15px;"/>
 			</div>
@@ -12,7 +12,7 @@
 		</div>
 	</div>
 	<div *ngIf="!data" class="chama-nao-detectada rounded">
-		<div class="row text-center">
+		<div class="row text-center" style="height: 100px;">
 			<div class="col-md-4">
 				<img src="images/ic_flame_little_no.png" style="position: absolute; padding-top: 15px;"/>
 			</div>
